[CHANGED] scale9通用类挪到lib中

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..;..\include\c99;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..;..\include\c99;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -953,14 +953,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\dataset\Scale9Sprite.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\Scale9Sprite.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\drag2d\dataset\ShapeSprite.cpp"
 					>
 				</File>
@@ -1058,14 +1050,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\dataset\MeshSymbol.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\Scale9Symbol.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\Scale9Symbol.h"
 					>
 				</File>
 				<File
@@ -1421,14 +1405,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\common\Scale9FileAdapter.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\common\Scale9FileAdapter.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\drag2d\common\ShapeFileAdapter.cpp"
 					>
 				</File>
@@ -1697,18 +1673,6 @@
 					</File>
 				</Filter>
 				<Filter
-					Name="scale9"
-					>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryScale9Page.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryScale9Page.h"
-						>
-					</File>
-				</Filter>
-				<Filter
 					Name="fontblank"
 					>
 					<File
@@ -1851,14 +1815,6 @@
 				<Filter
 					Name="symbol"
 					>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\Scale9PropertySetting.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\Scale9PropertySetting.h"
-						>
-					</File>
 					<File
 						RelativePath="..\..\..\src\drag2d\view\SymbolPropertySetting.cpp"
 						>
@@ -2241,7 +2197,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						ObjectFile="..\libdrag2d\x86\Debug\triangle2.obj"
+						ObjectFile="..\libdrag2d\x86\Debug\triangle1.obj"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -2249,7 +2205,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						ObjectFile="..\libdrag2d\x86\Debug\triangle2.obj"
+						ObjectFile="..\libdrag2d\x86\Debug\triangle1.obj"
 					/>
 				</FileConfiguration>
 			</File>
