--- a/editor_src2/easyscale9/platform/msvc2008/projects/libscale9.vcproj
+++ b/editor_src2/easyscale9/platform/msvc2008/projects/libscale9.vcproj
@@ -189,13 +189,69 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libscale9\ResizeOP.cpp"
+				RelativePath="..\..\..\src\libscale9\ResizeBaseOP.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libscale9\ResizeOP.h"
+				RelativePath="..\..\..\src\libscale9\ResizeBaseOP.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="dataset"
+			>
+			<File
+				RelativePath="..\..\..\src\libscale9\FileAdapter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\FileAdapter.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\Sprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\Sprite.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\Symbol.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\Symbol.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="view"
+			>
+			<Filter
+				Name="library"
+				>
+				<File
+					RelativePath="..\..\..\src\libscale9\LibraryPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libscale9\LibraryPage.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\libscale9\SymbolPropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libscale9\SymbolPropertySetting.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
