[CHANGED] easyscale9去掉Context结构

--- a/editor_src2/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
+++ b/editor_src2/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
@@ -249,6 +249,10 @@
 			Name="frame"
 			>
 			<File
+				RelativePath="..\..\..\src\easyscale9\config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easyscale9\Context.cpp"
 				>
 			</File>
