--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ deprecated
 /editor_src2/easymesh/platform/msvc2008/easymesh
 /editor_src2/easymesh/platform/msvc2008/libmesh
 /editor_src2/easypacker/platform/msvc2008/easypacker
+/editor_src2/easyimage/platform/msvc2008/easyimage
 /editor_src2/formation/platform/msvc2008/formation
 /editor_src2/raiden/platform/msvc2008/raiden
 /editor_src2/shootbubble/platform/msvc2008/shootbubble
