--- a/editor_src2/easyparticle3d/platform/msvc2008/projects/easyparticle3d.vcproj
+++ b/editor_src2/easyparticle3d/platform/msvc2008/projects/easyparticle3d.vcproj
@@ -182,6 +182,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\easyparticle3d\CocoPacker.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle3d\CocoPacker.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
 			>
 		</File>
