--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2044,6 +2044,14 @@
 					RelativePath="..\..\..\src\drag2d\view\ExitDlg.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\FinishDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\FinishDialog.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="frame"
