[ADDED] image cut操作的保存和读取

--- a/editor_src2/easyimage/platform/msvc2008/projects/easyimage.vcproj
+++ b/editor_src2/easyimage/platform/msvc2008/projects/easyimage.vcproj
@@ -218,6 +218,14 @@
 			Name="frame"
 			>
 			<File
+				RelativePath="..\..\..\src\easyimage\Frame.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyimage\Frame.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easyimage\main.cpp"
 				>
 			</File>
