--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..;..\include\c99;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..;..\include\c99;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyimage\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\coceditor\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyimage\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -2205,7 +2205,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						ObjectFile="..\libdrag2d\x86\Debug\triangle1.obj"
+						ObjectFile="..\libdrag2d\x86\Debug\triangle2.obj"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -2213,7 +2213,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						ObjectFile="..\libdrag2d\x86\Debug\triangle1.obj"
+						ObjectFile="..\libdrag2d\x86\Debug\triangle2.obj"
 					/>
 				</FileConfiguration>
 			</File>
