--- a/editor_src2/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/editor_src2/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libcoco"
-	ProjectGUID="{1C3B5344-2217-44F5-B5F0-A551B7B5AB38}"
-	RootNamespace="libcoco"
+	Name="libimage"
+	ProjectGUID="{D41C0B3E-F0A0-4A1F-A568-0100C839406C}"
+	RootNamespace="libimage"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\libcoco\x86\Debug"
-			IntermediateDirectory="..\libcoco\x86\Debug\obj"
+			OutputDirectory="..\libimage\x86\Debug"
+			IntermediateDirectory="..\libimage\x86\Debug\obj"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -41,14 +41,12 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\cocextract;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyimage\src"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
-				AssemblerListingLocation="..\libcoco\x86\Debug"
-				ProgramDataBaseFileName="..\libcoco\x86\Debug\cocextract.pdb"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -82,8 +80,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\libcoco\x86\Release"
-			IntermediateDirectory="..\libcoco\x86\Release\obj"
+			OutputDirectory="..\libimage\x86\Release"
+			IntermediateDirectory="..\libimage\x86\Release\obj"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -107,13 +105,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\cocextract;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyimage\src"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				AssemblerListingLocation="..\libcoco\x86\Release"
-				ProgramDataBaseFileName="..\libcoco\x86\Release\cocextract.pdb"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -150,43 +146,11 @@
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\..\src\libcoco\CocoPacker.cpp"
+			RelativePath="..\..\..\src\libimage\ImageProcessor.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\libcoco\CocoPacker.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\PackLuaFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\PackLuaFile.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\ParserLuaFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\ParserLuaFile.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\TexturePacker.h"
+			RelativePath="..\..\..\src\libimage\ImageProcessor.h"
 			>
 		</File>
 	</Files>
