[ADDED] 修复json文件数据

--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -198,6 +198,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\easydb\FixJsonFiles.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\FixJsonFiles.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
 			>
 		</File>
