[ADDED] 修改TexturePacker的json文件

--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -206,6 +206,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\easydb\FixTexPackerJson.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\FixTexPackerJson.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
 			>
 		</File>
