--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -182,6 +182,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\easydb\CopyFiles.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\CopyFiles.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easydb\FixAnimation.cpp"
 			>
 		</File>
