--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ deprecated
 /editor_src2/easyshape/platform/msvc2008/libshape
 /editor_src2/easydb/platform/msvc2008/easydb
 /editor_src2/easydb/platform/msvc2008/easydb_cl
+/editor_src2/easydb/platform/msvc2008/glfw
 /editor_src2/easymesh/platform/msvc2008/easymesh
 /editor_src2/easymesh/platform/msvc2008/libmesh
 /editor_src2/easypacker/platform/msvc2008/easypacker
