[ADDED] distance field font

--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -190,6 +190,22 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\easydb\DFFParser.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\DFFParser.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\DistanceFieldFont.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\DistanceFieldFont.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easydb\FixAnimation.cpp"
 			>
 		</File>
