[CHANGED] scale9，complex,anim 文件名的标识放到lib中的config文件内

--- a/editor_src2/easyanim/platform/msvc2008/projects/libanim.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/libanim.vcproj
@@ -197,6 +197,10 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libanim\config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libanim\Sprite.cpp"
 				>
 			</File>
