--- a/editor_src2/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/editor_src2/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -197,6 +197,10 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libcomplex\config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcomplex\Sprite.cpp"
 				>
 			</File>
