--- a/editor_src2/easyscale9/platform/msvc2008/projects/libscale9.vcproj
+++ b/editor_src2/easyscale9/platform/msvc2008/projects/libscale9.vcproj
@@ -213,6 +213,10 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libscale9\config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libscale9\Sprite.cpp"
 				>
 			</File>
