--- a/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -201,6 +201,10 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libmesh\config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libmesh\Sprite.cpp"
 				>
 			</File>
