[ADDED] recorder for particle

--- a/editor_src2/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/editor_src2/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -208,6 +208,14 @@
 				RelativePath="..\..\..\src\libparticle3d\FileIO.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle3d\Recorder.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle3d\Recorder.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="view"
