--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1346,6 +1346,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\common\PointerPool.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\common\ResourcesMgr.h"
 				>
 			</File>
