加入 loading_efun

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ deprecated
 /editor_bin/build_loading_p91
 /editor_bin/build_loading_mmzb
 /editor_bin/build_loading_mmzb_android
+/editor_bin/build_loading_efun
 /editor_bin/ui_output
 
 /pentagon_import/pt_char.lua
