[CHANGED] shape移出d2d，放到libshape

--- a/editor_src2/easyshape/platform/msvc2008/projects/libshape.vcproj
+++ b/editor_src2/easyshape/platform/msvc2008/projects/libshape.vcproj
@@ -228,6 +228,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="library"
+				>
+				<File
+					RelativePath="..\..\..\src\libshape\LibraryPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshape\LibraryPage.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="frame"
