[ADDED] 倒转anim播放顺序

--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -262,6 +262,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\easydb\ReverseAnimation.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
 			>
 		</File>
