[ADDED] 打包粒子数据

--- a/editor_src2/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/editor_src2/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -185,6 +185,14 @@
 			Name="file"
 			>
 			<File
+				RelativePath="..\..\..\src\libparticle3d\CocoPacker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle3d\CocoPacker.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libparticle3d\Code.cpp"
 				>
 			</File>
