--- a/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src"
+				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src"
+				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -181,6 +181,94 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="fix"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\FixAnimation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixAnimation.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixImages.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixImages.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixJsonFiles.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixJsonFiles.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixTexPackerJson.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixTexPackerJson.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="verify"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\VerifyImages.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\VerifyImages.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\VerifyJsons.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\VerifyJsons.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="format"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FormatJsonFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\ReverseAnimation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="pack"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\PackParticle3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\PackParticle3D.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\easydb\CopyFiles.cpp"
 			>
@@ -206,46 +294,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easydb\FixAnimation.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixAnimation.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixImages.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixImages.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixJsonFiles.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixJsonFiles.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixTexPackerJson.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FixTexPackerJson.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\FormatJsonFile.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\easydb_cl\main.cpp"
 			>
 		</File>
@@ -262,35 +310,11 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easydb\ReverseAnimation.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\easydb\Snapshoot.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\VerifyImages.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\VerifyImages.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\VerifyJsons.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easydb\VerifyJsons.h"
 			>
 		</File>
 	</Files>
