[FIXED] 调整打包scale参数
Conflicts:
	editor_src2/coceditor/src/cocpackage/main.cpp

--- a/editor_src2/coceditor/platform/msvc2008/projects/cocpackage.vcproj
+++ b/editor_src2/coceditor/platform/msvc2008/projects/cocpackage.vcproj
@@ -210,6 +210,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\coceditor\TexPackerAdapter.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\coceditor\TexPackerAdapter.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\coceditor\TexturesMgr.cpp"
 			>
 		</File>
