[ADDED] uv editor for mesh

--- a/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -312,6 +312,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="uv"
+				>
+				<File
+					RelativePath="..\..\..\src\libmesh\EditUVCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\EditUVCMPT.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\EditUVOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\EditUVOP.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="frame"
