--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1050,6 +1050,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\common\Statistics.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\common\Statistics.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\common\UserDataImpl.cpp"
 				>
 			</File>
