--- a/.gitignore
+++ b/.gitignore
@@ -72,62 +72,64 @@ deprecated
 /sg_ui_script/resize_png/output
 
 /particles/
-/editor_src2/coceditor/.svn
-/editor_src2/coceditor/platform/msvc2008/coceditor
-/editor_src2/coceditor/platform/msvc2008/cocextract
-/editor_src2/coceditor/platform/msvc2008/cocextrude
-/editor_src2/coceditor/platform/msvc2008/cocpackage
-/editor_src2/coceditor/platform/msvc2008/imagebool
-/editor_src2/coceditor/platform/msvc2008/libcoco
-/editor_src2/ejoy2d
-/editor_src2/drag2d/.git
-/editor_src2/drag2d/.gitignore
-/editor_src2/drag2d/LICENSE
-/editor_src2/drag2d/README.md
-/editor_src2/drag2d/platform/msvc2008/libbox2d
-/editor_src2/drag2d/platform/msvc2008/libdrag2d
-/editor_src2/easyscale9/.svn
-/editor_src2/easyscale9/.gitignore
-/editor_src2/easyscale9/platform/msvc2008/easyscale9
-/editor_src2/easyscale9/platform/msvc2008/libscale9
-/editor_src2/easyanim/.git
-/editor_src2/easyanim/.gitignore
-/editor_src2/easyanim/platform/msvc2008/easyanim
-/editor_src2/easyanim/platform/msvc2008/easyanimation
-/editor_src2/easyanim/platform/msvc2008/libanim
-/editor_src2/easybuilder/.git
-/editor_src2/easybuilder/platform/msvc2008/easybuilder
-/editor_src2/easybuilder/platform/msvc2008/libbuilder
-/editor_src2/easycomplex/.svn
-/editor_src2/easycomplex/platform/msvc2008/easycomplex
-/editor_src2/easycomplex/platform/msvc2008/libcomplex
-/editor_src2/easymodeling/.git
-/editor_src2/easymodeling/platform/msvc2008/easymodeling
-/editor_src2/easymodeling/platform/msvc2008/libmodeling
-/editor_src2/easyparticle/.git
-/editor_src2/easyparticle/.svn
-/editor_src2/easyparticle2d/platform/msvc2008/easyparticle2d
-/editor_src2/easyparticle3d/platform/msvc2008/easyparticle3d
-/editor_src2/easyparticle3d/platform/msvc2008/libparticle3d
-/editor_src2/easyshape/.git
-/editor_src2/easyshape/platform/msvc2008/easyshape
-/editor_src2/easyshape/platform/msvc2008/libshape
-/editor_src2/easydb/platform/msvc2008/easydb
-/editor_src2/easydb/platform/msvc2008/easydb_cl
-/editor_src2/easydb/platform/msvc2008/glfw
-/editor_src2/easymesh/platform/msvc2008/easymesh
-/editor_src2/easymesh/platform/msvc2008/libmesh
-/editor_src2/easypacker/platform/msvc2008/easypacker
-/editor_src2/easyimage/platform/msvc2008/easyimage
-/editor_src2/easyimage/platform/msvc2008/libimage
-/editor_src2/formation/platform/msvc2008/formation
-/editor_src2/raiden/platform/msvc2008/raiden
-/editor_src2/shootbubble/platform/msvc2008/shootbubble
-/editor_src2/drag2d/src/common/libpng/contrib
-/editor_src2/libraries/lua-5.2.3/doc
-/editor_src2/libraries/lua-5.2.3/lua
-/editor_src2/libraries/lua-5.2.3/Makefile
-/editor_src2/libraries/lua-5.2.3/README
-/editor_src2/easydb/src/glfw/glfw.lib
+coceditor/.svn
+coceditor/platform/msvc2008/coceditor
+coceditor/platform/msvc2008/cocextract
+coceditor/platform/msvc2008/cocextrude
+coceditor/platform/msvc2008/cocpackage
+coceditor/platform/msvc2008/imagebool
+coceditor/platform/msvc2008/libcoco
+ejoy2d
+all/Debug
+all/Release
+drag2d/.git
+drag2d/.gitignore
+drag2d/LICENSE
+drag2d/README.md
+drag2d/platform/msvc2008/libbox2d
+drag2d/platform/msvc2008/libdrag2d
+easyscale9/.svn
+easyscale9/.gitignore
+easyscale9/platform/msvc2008/easyscale9
+easyscale9/platform/msvc2008/libscale9
+easyanim/.git
+easyanim/.gitignore
+easyanim/platform/msvc2008/easyanim
+easyanim/platform/msvc2008/easyanimation
+easyanim/platform/msvc2008/libanim
+easybuilder/.git
+easybuilder/platform/msvc2008/easybuilder
+easybuilder/platform/msvc2008/libbuilder
+easycomplex/.svn
+easycomplex/platform/msvc2008/easycomplex
+easycomplex/platform/msvc2008/libcomplex
+easymodeling/.git
+easymodeling/platform/msvc2008/easymodeling
+easymodeling/platform/msvc2008/libmodeling
+easyparticle/.git
+easyparticle/.svn
+easyparticle2d/platform/msvc2008/easyparticle2d
+easyparticle3d/platform/msvc2008/easyparticle3d
+easyparticle3d/platform/msvc2008/libparticle3d
+easyshape/.git
+easyshape/platform/msvc2008/easyshape
+easyshape/platform/msvc2008/libshape
+easydb/platform/msvc2008/easydb
+easydb/platform/msvc2008/easydb_cl
+easydb/platform/msvc2008/glfw
+easymesh/platform/msvc2008/easymesh
+easymesh/platform/msvc2008/libmesh
+easypacker/platform/msvc2008/easypacker
+easyimage/platform/msvc2008/easyimage
+easyimage/platform/msvc2008/libimage
+formation/platform/msvc2008/formation
+raiden/platform/msvc2008/raiden
+shootbubble/platform/msvc2008/shootbubble
+drag2d/src/common/libpng/contrib
+libraries/lua-5.2.3/doc
+libraries/lua-5.2.3/lua
+libraries/lua-5.2.3/Makefile
+libraries/lua-5.2.3/README
+easydb/src/glfw/glfw.lib
 /editor_bin/_tmp_ejoy2d_preview/
-editor_src2/easycomplex/platform/msvc2008/projects/_tmp_ejoy2d_preview/
+easycomplex/platform/msvc2008/projects/_tmp_ejoy2d_preview/
