--- a/easyanim/platform/msvc2008/projects/libanim.vcproj
+++ b/easyanim/platform/msvc2008/projects/libanim.vcproj
@@ -161,6 +161,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libanim\PreviewControl.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libanim\PreviewDialog.cpp"
 				>
 			</File>
