[CHANGED] 处理pixels的代码移到libimage

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -153,6 +153,14 @@
 			RelativePath="..\..\..\src\libimage\ImageProcessor.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\src\libimage\PixelsTools.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libimage\PixelsTools.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
